# kime

./: README.ko.md  README.md
.github/workflows/: ci.yaml
docs/: CHANGELOG.md
src/frontends/wayland/: Cargo.toml
src/frontends/wayland/src/: main.rs
src/frontends/xim/: Cargo.toml
src/frontends/xim/src/: main.rs
src/tools/version/: Cargo.toml
src/tools/version/src/: lib.rs
