[package]
name = "kime-wayland"
version = "0.1.0"
authors = ["Riey <creeper844@gmail.com>"]
edition = "2018"
license = "GPL-3.0"

[dependencies]
kime-engine-cffi = { path = "../../engine/cffi" }
kime-version = { path = "../../tools/version" }

wayland-commons = "0.28.5"
wayland-client = "0.28.5"
# zwp-input-method = { git = "https://github.com/Riey/zwp-input-method" }
zwp-virtual-keyboard = "0.2.2"

libc = "0.2.88"
log = "0.4.13"
mio = { version = "0.7.9", features = ["os-ext"] }
mio-timerfd = "0.2.0"
wayland-protocols = { version = "0.28.5", features = ["client", "unstable_protocols"] }

[build-dependencies]
wayland-scanner = "0.28.5"

